# CMake-Resources

./: LICENSE  README.md
cmake/: ResourceTypes.h.in  Resources.cc.in  Resources.cmake  Resources.h.in  Resources.py
example/: CMakeLists.txt  example.cc  example2.cc  res-example1.json  res-example2.json  res-example3.json
